src/components/projects.css
.section-title {
  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
  font-size: 28px;
  margin-bottom: 9px;
  padding-bottom: 10px;
}

.project-list {
  display: flex;
  flex-wrap: wrap;
}

.card {
  background-color: #212121;
  border-radius: 15px;
  flex: 0 1 calc(50% - 30px);
  margin: 15px 0;
  padding: 24px 20px;
}

.card.even {
  margin-right: 15px;
}

.card.odd {
  margin-left: 15px;
}

.card-title {
  font-size: 20px;
}

.card-description {
  border-bottom: 1px solid rgba(255, 255, 255, 0.15);;
  border-top: 1px solid rgba(255, 255, 255, 0.15);;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 14px;
  margin-top: 8px;
  opacity: 1;
  padding: 14px 0;
}

